--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -34,11 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
+  primary:    #00E676,
   secondary:  #32db64,
   danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+  light:      #9E9E9E,
+  dark:       #222,
+  white:      #ffffff
 );
 
 
