--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -34,7 +34,7 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #00E676,
+  primary:    #11A37D,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #9E9E9E,
