--- a/skatehub/src/pages/register/register.scss
+++ b/skatehub/src/pages/register/register.scss
@@ -1,3 +1,24 @@
 page-register {
+  ion-content {
+    background-image: url('../assets/imgs/background.jpg');
+    -webkit-background-image: url('../assets/imgs/background.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
+  }
+  ion-item {
+    border-radius: 10px !important;
+    height: 45px;
+    width: 100%;
+  }
+  div.input-wrapper {
+    margin-bottom: 18px;
+  }
+
+  #registerbutton {
+    border-radius: 10px !important;
+    width: 91%;
+    margin-left: 15px;
+    margin-right: 16px;
+  }
 
 }
