Added some color variables

--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #9E9E9E,
   dark:       #222,
-  white:      #ffffff
+  white:      #ffffff,
+  black:      #000000
 );
 
 
