--- a/skatehub/src/pages/navigate/navigate.scss
+++ b/skatehub/src/pages/navigate/navigate.scss
@@ -1,3 +1,11 @@
 page-navigate {
+  #map {
+    height: 100%;
+    }
+  html, body {
+    height: 100%;
+    width: 100%;
+    background-color: black;
+  }
 
 }
