--- a/skatehub/src/pages/profile/profile.scss
+++ b/skatehub/src/pages/profile/profile.scss
@@ -1,3 +1,25 @@
 page-profile {
-
+  .top-spacing {
+    margin-top: 15%;
+  }
+  .top-spacing-buttons {
+    margin-top: 15%;
+  }
+  .profile-shift {
+    margin-left: 5%;
+    position: relative;
+  }
+  .avatar-border {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    //border: 10px solid map-get($colors, primary);
+  }
+  .square-background {
+    background-color: map-get($colors, primary);
+    position: absolute;
+    width: 100%;
+    height: 45%;
+    opacity: 0.5;
+  }
 }
