added more color variables

--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -40,7 +40,8 @@ $colors: (
   light:      #9E9E9E,
   dark:       #222,
   white:      #ffffff,
-  black:      #000000
+  black:      #000000,
+  grey:       #252833
 );
 
 
