Tidying up bugs and design

--- a/skatehub/src/pages/detailed-spot/detailed-spot.scss
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.scss
@@ -1,3 +1,8 @@
 page-detailed-spot {
-
+  .border-green {
+    border-color: map-get($colors, primary);
+    border-style: solid;
+    border-width: medium;
+    border-radius: 50%;
+  }
 }
