Fixed positioning of homepage SkateHub and post New Spot headers for android devices

--- a/skatehub/src/pages/home/home.scss
+++ b/skatehub/src/pages/home/home.scss
@@ -1,6 +1,21 @@
 page-home {
   #filter {
     font-size: 1.2em;
+    text-transform: none;
+  }
+  #SkateHub {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5 90px 1px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+
+  #bubbles {
+
+    //text-align: center;
   }
   .border-green {
     border-color: map-get($colors, primary);
