--- a/skatehub/src/app/app.scss
+++ b/skatehub/src/app/app.scss
@@ -20,3 +20,16 @@ body {
 -ms-user-select: text;
 user-select: text;
 }
+
+.fs-14 {
+  font-size: 14px;
+}
+
+.fs-16 {
+  font-size: 16px;
+}
+
+
+.fs-18 {
+  font-size: 18px;
+}
