--- a/skatehub/src/pages/search/search.scss
+++ b/skatehub/src/pages/search/search.scss
@@ -1,3 +1,13 @@
 page-search {
-
+	// http://www.colorhexa.com/11a37d
+	// color scheme
+	.searchBackGround {
+		background-color: #1180a3;
+	}
+	.searchListHeader {
+		background-color: #11a334;
+	}
+	.listArr {
+		background-color: #11a37d;
+	}
 }
