Made map to fill Div, added SKlogo at top right to make as button for navigating to active spots as well

--- a/skatehub/src/pages/navigate/navigate.scss
+++ b/skatehub/src/pages/navigate/navigate.scss
@@ -1,6 +1,8 @@
 page-navigate {
   #map {
     height: 100%;
+    width: 100%;
+
     }
   html, body {
     height: 100%;
@@ -8,4 +10,16 @@ page-navigate {
     background-color: black;
   }
 
+  #maptitle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 5 90px 1px;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+  }
+  #logo{
+    float: right;
+  }
 }
