--- a/skatehub/src/pages/profile/profile.scss
+++ b/skatehub/src/pages/profile/profile.scss
@@ -22,7 +22,39 @@ page-profile {
     height: 45%;
     opacity: 0.5;
   }
+  .ion-grid{
+    margin-top: 20%;
+    height: 55%;
+    width: 100%;
+    grid-column-gap: 5px;
+    grid-row-gap: 5px;
+  }
+  .ion-row{
+    height:100%;
+  }
+  .ion-top-row{
+    height:100%;
+    font-size: 20px;
+    border-bottom: outset 3px map-get($colors, primary);
+  }
+  .ion-left-col{
+    text-align: center;
+    font-size: 20px;
+    border-right: outset 3px map-get($colors, primary);
+  }
+  .grid-border{
+    text-align: center;
+    font-size: 20px;
+    width: 100%;
+    //border: outset 2px map-get($colors, primary);
+    //box-shadow: 2px 2px 1px black;
+  }
+  .icons{
+    font-size: 60px;
+  }
 }
+
+
 ion-toast.warning .toast-wrapper {
 	background: map-get($colors, danger);
 }
