--- a/skatehub/src/pages/profile/profile.scss
+++ b/skatehub/src/pages/profile/profile.scss
@@ -20,7 +20,7 @@ page-profile {
     position: absolute;
     width: 100%;
     height: 45%;
-    opacity: 0.5;
+    // opacity: 0.5;
   }
   .ion-grid{
     margin-top: 20%;
