User can edit avatar thru photo library ... got add some specs for camera for ios

--- a/skatehub/src/pages/profile/profile.scss
+++ b/skatehub/src/pages/profile/profile.scss
@@ -58,3 +58,6 @@ page-profile {
 ion-toast.warning .toast-wrapper {
 	background: map-get($colors, danger);
 }
+ion-toast.success .toast-wrapper {
+	background: map-get($colors, primary);
+}
