--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -41,7 +41,9 @@ $colors: (
   dark:       #222,
   white:      #ffffff,
   black:      #000000,
-  grey:       #252833
+  grey:       #252833,
+  iosBlue:    #54C7FC,
+  iosDarkBlue: #0076FF
 );
 
 
