--- a/skatehub/src/pages/detailed-user/detailed-user.scss
+++ b/skatehub/src/pages/detailed-user/detailed-user.scss
@@ -22,4 +22,58 @@ page-detailed-user {
       height: 45%;
       opacity: 0.5;
     }
+    .addFriendClass{
+      background-color: #FA8072;
+      position: absolute;
+      margin-top: 10%;
+      margin-left: 45%;
+      //font-size: 15px;
+    }
+    .sendInviteClass{
+      background-color: #FA8072;
+      position: absolute;
+      margin-top: 10%;
+      margin-left: 75%;
+      //font-size: 15px;
+    }
+    .sendMessageClass{
+      background-color: #FA8072;
+      position: absolute;
+      margin-top: 10%;
+      margin-left: 15%;
+    }
+    .badgeIcons{
+      font-size: 30px;
+    }
+    .ion-row{
+      height:100%;
+    }
+    .icons{
+      font-size: 60px;
+    }
+    .ion-top-row{
+      height:100%;
+      font-size: 20px;
+      border-bottom: outset 3px map-get($colors, primary);
+    }
+    .ion-left-col{
+      text-align: center;
+      font-size: 20px;
+      border-right: outset 3px map-get($colors, primary);
+    }
+    .ion-grid{
+      position: static;
+      margin-top: 20%;
+      height: 55%;
+      width: 100%;
+      grid-column-gap: 5px;
+      grid-row-gap: 5px;
+    }
+    .grid-border{
+      text-align: center;
+      font-size: 20px;
+      width: 100%;
+      //border: outset 2px map-get($colors, primary);
+      //box-shadow: 2px 2px 1px black;
+    }
 }
