--- a/skatehub/src/pages/detailed-user/detailed-user.scss
+++ b/skatehub/src/pages/detailed-user/detailed-user.scss
@@ -16,7 +16,7 @@ page-detailed-user {
       //border: 10px solid map-get($colors, primary);
     }
     .square-background {
-      background-color: map-get($colors, primary);
+      background-color: map-get($colors, iosDarkBlue);
       position: absolute;
       width: 100%;
       height: 45%;
@@ -54,12 +54,12 @@ page-detailed-user {
     .ion-top-row{
       height:100%;
       font-size: 20px;
-      border-bottom: outset 3px map-get($colors, primary);
+      border-bottom: outset 3px map-get($colors, iosBlue);
     }
     .ion-left-col{
       text-align: center;
       font-size: 20px;
-      border-right: outset 3px map-get($colors, primary);
+      border-right: outset 3px map-get($colors, iosBlue);
     }
     .ion-grid{
       position: static;
