"Updated color scheme for settings"

--- a/skatehub/src/pages/settings/settings.scss
+++ b/skatehub/src/pages/settings/settings.scss
@@ -9,7 +9,7 @@ page-settings {
   // If user has a default avatar use this class
   .avatar-border {
     border-radius: 50%;
-    border-color: map-get($colors, primary);
+    border-color: map-get($colors, iosBlue);
     border-style: solid;
     border-width: 8px;
     width: 100px;
@@ -24,15 +24,15 @@ page-settings {
   }
   .edit-icon {
     font-size: 25px;
-    color: map-get($colors, primary);
+    color: map-get($colors, iosBlue);
   }
 
 }
 
 //cssClass for the toasts. Success is green toast, warning is red toast.
 ion-toast.success .toast-wrapper {
-	background: map-get($colors, primary);
+	background: map-get($colors, iosBlue);
 }
 ion-toast.warning .toast-wrapper {
-	background: map-get($colors, danger);
+	background: map-get($colors, iosBlue);
 }
