--- a/skatehub/src/theme/variables.scss
+++ b/skatehub/src/theme/variables.scss
@@ -37,6 +37,7 @@ $colors: (
   primary:    #11A37D,
   secondary:  #32db64,
   danger:     #f53d3d,
+  success:    #4CAF50,
   light:      #9E9E9E,
   dark:       #222,
   white:      #ffffff,
