Toasts. Not buttered. (#109)
* toasts on toasts

* formatn

* formatting v2

* formatting nic

* formatting again

--- a/skatehub/src/pages/comments/comments.scss
+++ b/skatehub/src/pages/comments/comments.scss
@@ -1,3 +1,9 @@
 page-comments {
 
 }
+ion-toast.warning .toast-wrapper {
+	background: map-get($colors, danger);
+}
+ion-toast.success .toast-wrapper {
+	background: map-get($colors, primary);
+}
