--- a/skatehub/src/pages/search/search.scss
+++ b/skatehub/src/pages/search/search.scss
@@ -5,7 +5,7 @@ page-search {
 		background-color: #1180a3;
 	}
 	.searchListHeader {
-		background-color: #11a334;
+		//background-color: #11a334;
 	}
 	.listArr {
 		background-color: #11a37d;
