--- a/skatehub/src/pages/home/home.scss
+++ b/skatehub/src/pages/home/home.scss
@@ -17,12 +17,33 @@ page-home {
 
     //text-align: center;
   }
-  .border-green {
-    border-color: map-get($colors, primary);
-    border-style: solid;
-    border-width: medium;
-    border-radius: 50%;
+  .swiper-pagination-bullet {
+    background: #d7e5f9;
+    opacity: 0.5;
   }
+
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+    background: map-get($colors, primary);
+  }
+  .avatar-border {
+    border-radius: 12px;
+    width: 80px;
+    height: 80px;
+    border: 2px solid #ffffff;
+  }
+  ion-card {
+    box-shadow: none !important;
+  }
+  ion-card:first-of-type {
+    margin-top: 2em;
+  }
+  // .border-secondary {
+  //   border-color: map-get($colors, secondary);
+  //   border-style: solid;
+  //   border-width: medium;
+  //   border-radius: 50%;
+  // }
   .border-bottom-green {
     border-bottom: .5px solid map-get($colors, primary);
   }
