--- a/skatehub/src/pages/profile/profile.scss
+++ b/skatehub/src/pages/profile/profile.scss
@@ -1,25 +1,29 @@
 page-profile {
   .top-spacing {
-    margin-top: 15%;
+    margin-top: 6em;
   }
   .top-spacing-buttons {
     margin-top: 15%;
   }
   .profile-shift {
-    margin-left: 5%;
+    margin-left: 2em;
     position: relative;
+  }
+  .profile-left {
+    margin-left: 2em;
+    // position: relative;
   }
   .avatar-border {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    //border: 10px solid map-get($colors, primary);
+    width: 80px;
+    height: 80px;
+    border: 2px solid #ffffff;
   }
   .square-background {
-    background-color: map-get($colors, iosDarkBlue);
+    background-color: map-get($colors, lightBHue);
     position: absolute;
     width: 100%;
-    height: 45%;
+    height: 8em;
     // opacity: 0.5;
   }
   .ion-grid{
@@ -51,6 +55,16 @@ page-profile {
   }
   .icons{
     font-size: 60px;
+  }
+
+  #edit {
+  margin-left: 22em;
+  position: absolute;
+  margin-top: 3em;
+  }
+  #username {
+    min-height: 2em !important;
+    height: 2.5em !important;
   }
 }
 
