redesigned detailed spot page

--- a/skatehub/src/pages/detailed-spot/detailed-spot.scss
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.scss
@@ -5,4 +5,7 @@ page-detailed-spot {
     border-width: medium;
     border-radius: 50%;
   }
+  ion-card {
+    box-shadow: none !important;
+  }
 }
