--- a/skatehub/src/pages/detailed-spot/detailed-spot.scss
+++ b/skatehub/src/pages/detailed-spot/detailed-spot.scss
@@ -8,4 +8,17 @@ page-detailed-spot {
   ion-card {
     box-shadow: none !important;
   }
+  ul {
+  padding: 0px;
+
+  &.rating li {
+    padding: 5px 10px !important;
+    background: none;
+    color: #ffb400;
+
+    ion-icon {
+      font-size: 20px;
+    }
+  }
+}
 }
