--- a/skatehub/src/pages/comments/comments.scss
+++ b/skatehub/src/pages/comments/comments.scss
@@ -1,9 +1,14 @@
 page-comments {
+	.comment-input {
+    background-color: #E0E0E0;
+    border-radius: 12px;
+    width: 95%;
+    padding-left: 10px;
+    margin-left: 10px;
+    min-height: 32px;
+    margin-bottom: 8px;
+    word-wrap: break-word;
 
-}
-ion-toast.warning .toast-wrapper {
-	background: map-get($colors, danger);
-}
-ion-toast.success .toast-wrapper {
-	background: map-get($colors, primary);
+  }
+
 }
